[package]
name = "codecrafters-kafka"
version = "0.1.0"
authors = ["Linda Siemons <linda@catbrained.dev>"]
edition = "2024"
rust-version = "1.86"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
thiserror = "1.0.38"                             # error handling
